test(practice.html): 1-9-1 테스트

--- a/practice.html
+++ b/practice.html
@@ -48,6 +48,15 @@ Liver Server를 사용한 이유
         <!-- <h1>주석이다</h1> -->
         <h1>주석 사용 후</h1>
         <h1>주석은 개행으로도 처리되지 않는다</h1>
+        <h1>가장 큰 헤딩 태그</h1>
+        <h2>그 다음 큰 헤딩 태그</h2>
+        <h3>그 다음</h3>
+        <h4>그 다음</h4>
+        <h5>그 다음</h5>
+        <h6>마지막 헤딩 태그</h6>
+        <p>첫번째 단락 첫번째 단락 첫번째 단락 첫번째 단락 첫번째 단락 첫번째 단락 첫번째 단락 후 개행<br>첫번째 단락의 두번째 줄 첫번째 단락의 두번째 줄</p>
+        <p>두번째 단락 두번째 단락 두번째 단락 두번째 단락 후 개행<br>두번째 단락의 두번째 줄 두번째 단락의 두번째 줄 두번째 단락의 두번째 줄</p>
+
     </body>
 
 </html>
