test(practice.html): 1-9-2, 1-9-3 테스트

--- a/practice.html
+++ b/practice.html
@@ -16,7 +16,7 @@ Liver Server를 사용한 이유
         <title> 연습모드</title>
     </head>
     <body>
-        <h1>Hello, HTML 1<br>Hello, HTML 1.5</h1>
+        <h1 id="Hello">Hello, HTML 1<br>Hello, HTML 1.5</h1>
         <h1>Hello, HTML 2</h1>
         <br>
         <h1>Hello, HTML 3</h1>
@@ -56,7 +56,13 @@ Liver Server를 사용한 이유
         <h6>마지막 헤딩 태그</h6>
         <p>첫번째 단락 첫번째 단락 첫번째 단락 첫번째 단락 첫번째 단락 첫번째 단락 첫번째 단락 후 개행<br>첫번째 단락의 두번째 줄 첫번째 단락의 두번째 줄</p>
         <p>두번째 단락 두번째 단락 두번째 단락 두번째 단락 후 개행<br>두번째 단락의 두번째 줄 두번째 단락의 두번째 줄 두번째 단락의 두번째 줄</p>
-
+        <b>굵은 글씨 Bold</b><br>
+        <i>기울임, 강조, 인용 등의 의미</i><br>
+        <u>밑줄</u><br>
+        <s>취소선</s><br>
+        <a>앵커 속성 없음</a><br>
+        <a href="#Hello">Hello, HTML 1로 이동하기</a><br>
+        <a href="#Hello" target="_blank">Hello, HTML 1로 이동하는데 새로운 탭에 표시</a>
     </body>
 
 </html>
