test(practice.html): 1-9-4, 1-9-5, 1-9-6 테스트

--- a/practice.html
+++ b/practice.html
@@ -63,6 +63,29 @@ Liver Server를 사용한 이유
         <a>앵커 속성 없음</a><br>
         <a href="#Hello">Hello, HTML 1로 이동하기</a><br>
         <a href="#Hello" target="_blank">Hello, HTML 1로 이동하는데 새로운 탭에 표시</a>
+        <div>div로 그룹화 하기 div로 그룹화 하기 1</div>
+        <div>div로 그룹화 하기 div로 그룹화 하기 2</div>
+        <div>div 중간에 span사용하기<span style="color:red;">span</span> div 중간에 span사용하기</div>
+        <ul>
+            <li>콜라</li>
+            <li>사이다</li>
+            <li>순서가 없는 리스트는 앞에 점으로 표시</li>
+        </ul>
+        <ol>
+            <li>물끓이기</li>
+            <li>스프넣기</li>
+            <li>면넣기</li>
+            <li>순서가 있는 리스트는 앞에 숫자로 표시</li>
+        </ol>
+        <dl>
+            <dt>HTML</dt>
+            <dd>웹 페이지를 만들기 위한 마크업언어</dd>
+            <dd>CSS를 이용한 스타일링 가능</dd>
+        </dl>
+        <img src="test_image.png" alt="테스트이미지"><br>
+        <img src="test_image.png" alt="테스트이미지" width="200"><br>
+        <img src="test_image.png" alt="테스트이미지" width="200" height="400"><br>
+        <img src="test_image.png" alt="테스트이미지" title="test이미지">
     </body>
 
 </html>
