test(practice.html): 1-9-7 테스트

--- a/practice.html
+++ b/practice.html
@@ -86,7 +86,36 @@ Liver Server를 사용한 이유
         <img src="test_image.png" alt="테스트이미지" width="200"><br>
         <img src="test_image.png" alt="테스트이미지" width="200" height="400"><br>
         <img src="test_image.png" alt="테스트이미지" title="test이미지">
+        <table border="1">
+            <caption>테이블제목</caption>
+            <thead>
+                <tr>
+                    <th></th>
+                    <th scope="row">열이름</th>
+                    <th rowspan="2">1</th>
+                    <th rowspan="2">2</th>
+                    <th rowspan="2">3</th>
+                </tr>
+                <tr>
+                    <th scope="col">행이름</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td colspan="2" align="center">첫번째행</td>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <td colspan="2" align="right">두번째행</td>
+                    <td>4</td>
+                    <td>5</td>
+                    <td>6</td>
+                </tr>
+            </tbody>
+        </table>
     </body>
-
 </html>
 
