--- a/practice.html
+++ b/practice.html
@@ -116,6 +116,62 @@ Liver Server를 사용한 이유
                 </tr>
             </tbody>
         </table>
+        <hr>
+        <form action="" method="POST">
+            <input type="text" name="username" placeholder="이름 입력" value="홍길동" id="username">
+            <input type="password" name="password" placeholder="비밀번호 입력" id="password"><br>
+            성별: 
+            <input type="radio" name="성별" value="남" id="남자"><label for="남자">남</label>
+            <input type="radio" name="성별" value="여" id="여자"><label for="여자">여</label>
+            <br>
+            취미(중복 가능)<br>
+            <table border="1">
+                <tr>
+                    <td>
+                        <input type="checkbox" name="취미" value="코딩" checked>코딩
+                        <br>
+                        <input type="checkbox" name="취미" value="영화관람">영화관람
+                        <input type="checkbox" name="취미" value="음악감상">음악감상
+                        <input type="checkbox" name="취미" value="독서">독서
+                        <br>
+                        <input type="checkbox" name="취미" value="조깅">조깅
+                        <input type="checkbox" name="취미" value="헬스">헬스
+                        <input type="checkbox" name="취미" value="러닝">러닝
+                    </td>
+                </tr>
+            </table>
+            이메일 주소: <input type="email" name="email" placeholder="이메일 주소 입력">
+            <br>
+            좋아하는 숫자: <input type="number" name="좋아하는숫자" placeholder="1~10" min="1" max="10" step="1">
+            <br>
+            전화번호: <input type="tel" name="전화번호" placeholder="전화번호 유효성 검사는 JS로">
+            <br>
+            URL: <input type="url" name="URL" placeholder="https://깃허브.com">
+            <br>
+            날짜: <input type="date" name="date">
+            <br>
+            시간: <input type="time" name="time">
+            <br>
+            날짜와 시간: <input type="datetime-local" name="datetime-local">
+            <br>
+            범위: <input type="range" name="range" min="0" max="1000" step="100" value="500" id="range">
+            <br>
+            <input type="hidden" name="userID" value="12345">
+            <br>
+            업로드할 파일 선택:
+            <input type="file" name="파일이 서버로 전송될 이름">
+            <br>
+            이미지 클릭해서 업로드:
+            <input type="image" src="test_image.png" alt="업로드" name="파일이 서버로 전송될 이름" width="300">
+            <br>
+            <input type="button" value="아무 기능이 없는 버튼">
+            <input type="button" value="비활성화된 버튼" disabled>
+            <br>
+            <input type="reset" value="폼 초기화 버튼">
+            <input type="submit" value="폼 제출 버튼">
+        </form>
+        <hr>
+
     </body>
 </html>
 
