test(practice.html): 1-9-8 모두 테스트

--- a/practice.html
+++ b/practice.html
@@ -171,7 +171,37 @@ Liver Server를 사용한 이유
             <input type="submit" value="폼 제출 버튼">
         </form>
         <hr>
-
+        <form action="" method="post" id="tree">
+            <fieldset>
+                <legend>나무이름</legend>
+                <select name="나무이름" size="4">
+                    <optgroup label="3글자">
+                        <option value="소나무" selected>소나무</option>
+                        <option value="대나무">대나무</option>
+                    </optgroup>
+                    <optgroup label="4글자">
+                        <option value="단풍나무">단풍나무</option>
+                        <option value="은행나무">은행나무</option>
+                        <option value="가시나무" disabled>가시나무</option>
+                    </optgroup>
+                </select>
+            </fieldset>
+            <br>
+            <fieldset>
+                <legend>자유롭게 작성</legend>
+                <textarea name="자유" rows="3" cols="50" placeholder="자유롭게 입력하세요" wrap="hard" maxlength="10"></textarea>
+                <textarea name="자유" rows="3" cols="50" placeholder="자유롭게 입력하세요" wrap="hard">기본값</textarea>
+            </fieldset>
+            <br>
+            <fieldset>
+                <legend>버튼들</legend>
+                <button>아무 동작 없는 버튼</button>
+                <button disabled>아무 동작 없는 버튼</button>
+                <button>아무 동작 없는 버튼</button>
+            </fieldset>
+        </form>
+        <button id="tree" type="submit">나무이름 폼 제출</button>
+        <hr>
     </body>
 </html>
 
