test(practice.html): 1-10, 1-11, 1-12 테스트

--- a/practice.html
+++ b/practice.html
@@ -202,6 +202,22 @@ Liver Server를 사용한 이유
         </form>
         <button id="tree" type="submit">나무이름 폼 제출</button>
         <hr>
+        <b>그냥 굵은</b> vs <strong>중요한 의미가 있는 굵은</strong><br>
+        <i>그냥 기울어진</i> vs <em>강조하는 의미가 있는 기울어진</em><br>
+        <u>그냥 밑줄</u> vs <ins>새롭게 추가된 의미가 있는 밑줄</ins><br>
+        <s>그냥 중간선</s> vs <del>삭제된 의미가 있는 중간선</del><br>
+        <mark>강조할 텍스트</mark>
+        <figure>
+            <img src="test_image.png" alt="테스트이미지">
+            <figcaption>테스트이미지입니다</figcaption>
+        </figure>
+        <time>
+            <input type="datetime-local">
+        </time>
+        <details>
+            <summary>...더보기</summary>
+            <p>내용</p>
+        </details>
     </body>
 </html>
 
