--- a/practice.html
+++ b/practice.html
@@ -14,10 +14,16 @@ Liver Server를 사용한 이유
     <head>
         <meta charset="UTF-8">
         <title> 연습모드</title>
+        <link rel="stylesheet" href="style.css">
+        <style>
+            /* h1 {
+                color: blue; font-size: 2em;
+            } */
+        </style>
     </head>
     <body>
         <h1 id="Hello">Hello, HTML 1<br>Hello, HTML 1.5</h1>
-        <h1>Hello, HTML 2</h1>
+        <h1 style="color: red; font-size: 5em;">Hello, HTML 2</h1>
         <br>
         <h1>Hello, HTML 3</h1>
         <hr>
