test(practice.html, style.css): 2-3-1~2-3-8 테스트

--- a/practice.html
+++ b/practice.html
@@ -23,30 +23,30 @@ Liver Server를 사용한 이유
     </head>
     <body>
         <h1 id="Hello">Hello, HTML 1<br>Hello, HTML 1.5</h1>
-        <h1 style="color: red; font-size: 5em;">Hello, HTML 2</h1>
+        <h1 style="color: red; font-size: 3em;">Hello, HTML 2</h1>
         <br>
-        <h1>Hello, HTML 3</h1>
+        <h2>Hello, HTML 3</h2>
         <hr>
         <input type="text" name="username" placeholder="Enter your name">
-        <h1>공백 공백</h1>
-        <h1>탭  탭</h1>
-        <h1>줄바꿈1
+        <h3>공백 공백</h3>
+        <h4>탭  탭</h4>
+        <h1 class="first">줄바꿈1
             줄바꿈2
         </h1>
-        <h1>줄바꿈 br사용1
+        <h1 id="h1ID">줄바꿈 br사용1
             <br>
             줄바꿈 br사용2
         </h1>
-        <h1>여러공백nbsp로&nbsp;여러공백&nbsp;&nbsp;&nbsp;여러공백</h1>
-        <h1>여러공백space로   여러공백space로</h1>
-        <h1>여러공백tab으로             여러공백tab으로</h1>
+        <h1 class="space" id="nbsp1">여러공백nbsp로&nbsp;여러공백&nbsp;&nbsp;&nbsp;여러공백</h1>
+        <h1 class="space" id="space2">여러공백space로   여러공백space로</h1>
+        <h1 class="space" id="tab3">여러공백tab으로             여러공백tab으로</h1>
         <pre>
             pre 태그 사용
             여러공백nbsp로&nbsp;여러공백&nbsp;&nbsp;&nbsp;여러공백
             여러공백space로   여러공백space로
             여러공백tab으로             여러공백tab으로
-            <h1>여러공백nbsp로&nbsp;여러공백&nbsp;&nbsp;&nbsp;여러공백</h1>
-            <h1>여러공백space로   여러공백space로</h1>
+            <h1 class="space2">여러공백nbsp로&nbsp;여러공백&nbsp;&nbsp;&nbsp;여러공백</h1>
+            <h1 class="space3" id="space33">여러공백space로   여러공백space로</h1>
             <h1>여러공백tab으로             여러공백tab으로</h1>
         </pre>
         <h1>주석 사용 전</h1>
