test(practice.html, style.css): 2-3-10~2-3-12 테스트

--- a/practice.html
+++ b/practice.html
@@ -26,6 +26,8 @@ Liver Server를 사용한 이유
         <h1 style="color: red; font-size: 3em;">Hello, HTML 2</h1>
         <br>
         <h2>Hello, HTML 3</h2>
+        <br>
+        <h1 id="hellocss">Hello, <em>CSS</em></h1>
         <hr>
         <input type="text" name="username" placeholder="Enter your name">
         <h3>공백 공백</h3>
