--- a/practice.html
+++ b/practice.html
@@ -22,7 +22,7 @@ Liver Server를 사용한 이유
         </style>
     </head>
     <body>
-        <h1 id="Hello">Hello, HTML 1<br>Hello, HTML 1.5</h1>
+        <h1 class="firsthello" id="Hello">Hello, HTML 1<br>Hello, HTML 1.5</h1>
         <h1 style="color: red; font-size: 3em;">Hello, HTML 2</h1>
         <br>
         <h2>Hello, HTML 3</h2>
