test(practice.html): CSS 기능 테스트

--- a/practice.html
+++ b/practice.html
@@ -19,6 +19,16 @@ Liver Server를 사용한 이유
             /* h1 {
                 color: blue; font-size: 2em;
             } */
+            .container {
+                width: 220px;
+                height: 310px;
+            }
+            .card {
+                width: 220px;
+                height: 310px;
+                background-image: url(gengar.png);
+                background-size: cover;
+            }
         </style>
     </head>
     <body>
@@ -226,6 +236,10 @@ Liver Server를 사용한 이유
             <summary>...더보기</summary>
             <p>내용</p>
         </details>
+
+        <div class="container">
+            <div class="card"></div>
+        </div>
     </body>
 </html>
 
